<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RcvActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".175" >

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/RcvPONum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/po_number"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" 
                android:transitionName="ponum"/>

            <TextView
                android:id="@+id/RcvVend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:focusable="false"
                android:text="@string/vendor"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/RcvReqDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/req_date"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/RcvReqBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:focusable="false"
                android:text="@string/req_by"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/RcvOrdDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/order_date"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/RcvOrdBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/order_by"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <Button
            android:id="@+id/rcvComplete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="175dp"
            android:layout_marginRight="175dp"
            android:text="@string/rcv_complete" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcvItemsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight=".8" >
    </android.support.v7.widget.RecyclerView>

</LinearLayout>
